--- a/BlazorMovie/MovieClient/Pages/BanAccount.razor
+++ b/BlazorMovie/MovieClient/Pages/BanAccount.razor
@@ -42,9 +42,9 @@
 								</div>
 								<div>
 									<div id='container'>
-	@if (showAlert)
+	@if (alertService.showAlert)
 {
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+    <MudAlert Severity="alertService.severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => alertService.CloseAlert())">@alertService.content</MudAlert>
 }
 									</div>
 								</div>
