--- a/BlazorMovie/MovieClient/Pages/CreateStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/CreateStudio.razor
@@ -23,9 +23,9 @@
             <input type="date" @bind="@movie.PremiereDate" />
             <button class="button">Submit</button>
         </EditForm>
-        @if (showAlert)
+        @if (alertService.showAlert)
         {
-            <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+            <MudAlert Severity="alertService.severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => alertService.CloseAlert())">@alertService.content</MudAlert>
         }
 
     </form>
