--- a/BlazorMovie/MovieClient/Pages/ResetPassword.razor
+++ b/BlazorMovie/MovieClient/Pages/ResetPassword.razor
@@ -20,9 +20,9 @@
 						<h3><i class="fa fa-lock fa-4x"></i></h3>
 						<h2 class="text-center">Forgot Password?</h2>
 						<p>You can reset your password here.</p>
-							@if (showAlert)
+							@if (alertService.showAlert)
 {
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+    <MudAlert Severity="alertService.severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => alertService.CloseAlert())">@alertService.content</MudAlert>
 }
 
 						<div class="panel-body">
