--- a/BlazorMovie/MovieClient/Pages/SignUp.razor
+++ b/BlazorMovie/MovieClient/Pages/SignUp.razor
@@ -1,4 +1,5 @@
 ﻿@page "/signup"
+@inject AccountService _accountService;
 <PageTitle>Register</PageTitle>
 <head>
 	<meta charset="UTF-8">
@@ -90,8 +91,8 @@
 
 </body>
 
-	@if (showAlert)
+	@if (alertService.showAlert)
 {
-    <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+    <MudAlert Severity="alertService.severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => alertService.CloseAlert())">@alertService.content</MudAlert>
 }
 
