--- a/BlazorMovie/MovieClient/Pages/Contact.razor
+++ b/BlazorMovie/MovieClient/Pages/Contact.razor
@@ -52,9 +52,9 @@
           <div class="button">
             <input type="submit" value="Send Now">
           </div>
-          	@if (showAlert)
+          	@if (alertService.showAlert)
 {
-    <MudAlert Severity="Severity.Success" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+    <MudAlert Severity="@alertService.severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => alertService.CloseAlert())">@alertService.content</MudAlert>
 }
 
         </EditForm>
