--- a/BlazorMovie/MovieClient/Pages/DeleteMovieStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/DeleteMovieStudio.razor
@@ -36,9 +36,9 @@
                                     <EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
                                         <DataAnnotationsValidator />
                                         <ValidationSummary />
-                                        @if (showAlert)
+                                        @if (alertService.showAlert)
                                         {
-                                            <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+                                            <MudAlert Severity="alertService.severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => alertService.CloseAlert())">@alertService.content</MudAlert>
                                         }
                                         <div class="form-group">
                                             <label>Movie ID</label>
