--- a/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
@@ -61,9 +61,9 @@
                         <div class="login-form">
                             <div class="title">Replace any data of ID: </div>
                             <div class="title">@movie.MovieId</div>
-                            @if (showAlert)
+                            @if (alertService.showAlert)
                             {
-                                <MudAlert Severity="severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => CloseAlert())">@content</MudAlert>
+                                <MudAlert Severity="alertService.severity" Variant="Variant.Filled" ContentAlignment="HorizontalAlignment.Center" ShowCloseIcon="true" CloseIconClicked="(() => alertService.CloseAlert())">@alertService.content</MudAlert>
                             }
 
                             <form action="#">
