--- a/BlazorMovie/Maui/App.xaml
+++ b/BlazorMovie/Maui/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Maui"
-             x:Class="Maui.App">
+             xmlns:local="clr-namespace:BlazorMovie.Maui"
+             x:Class="BlazorMovie.Maui.App">
     <Application.Resources>
         <ResourceDictionary>
 
