--- a/BlazorMovie/Maui/MainPage.xaml
+++ b/BlazorMovie/Maui/MainPage.xaml
@@ -1,8 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:b="clr-namespace:Microsoft.AspNetCore.Components.WebView.Maui;assembly=Microsoft.AspNetCore.Components.WebView.Maui"
-             xmlns:local="clr-namespace:Maui"
-             x:Class="Maui.MainPage"
+             xmlns:local="clr-namespace:BlazorMovie.Maui"
+             x:Class="BlazorMovie.Maui.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
     <b:BlazorWebView HostPage="wwwroot/index.html">
