Learn secret storage

--- a/BlazorMovie/Server/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/BlazorMovie/Server/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page  "/ResetPassword"
 @model ResetPasswordModel
 @{
     ViewData["Title"] = "Reset password";
@@ -31,7 +31,3 @@
         </form>
     </div>
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
