--- a/BlazorMovie/MovieClient/Pages/Login.razor
+++ b/BlazorMovie/MovieClient/Pages/Login.razor
@@ -1,4 +1,4 @@
-﻿@inject AccountService _accountService
+﻿@inject IAccountService accountService
 @page "/login"
 <PageTitle>MovieTV - Sign in or Register</PageTitle>
 
