--- a/BlazorMovie/MovieClient/Pages/SignUp.razor
+++ b/BlazorMovie/MovieClient/Pages/SignUp.razor
@@ -1,5 +1,5 @@
 ﻿@page "/signup"
-@inject AccountService _accountService;
+@inject IAccountService _accountService;
 <PageTitle>Register</PageTitle>
 <head>
 	<meta charset="UTF-8">
