--- a/BlazorMovie/MovieClient/Pages/Test.razor
+++ b/BlazorMovie/MovieClient/Pages/Test.razor
@@ -59,6 +59,8 @@
 {
     <img src="@a" style="width: 250px; height: 250px;"> 
 }
+
+<video src="https://localhost:5001/api/admin/GetMovieFile?Id=bdb9043c-9e26-4d6a-99a8-f056c319a3a4"></video>
 @code {
     MovieModel movie = new();
 
@@ -66,13 +68,15 @@
     private async Task GetImageFile(InputFileChangeEventArgs e)
     {
         movie.ImageFile = new byte[e.File.Size];
-        await e.File.OpenReadStream().ReadAsync(movie.ImageFile);
+        await e.File.OpenReadStream(movie.ImageFile.Length).ReadAsync(movie.ImageFile);
+        movie.ImageFileExtensions = e.File.ContentType;
     }
 
     private async Task GetMovieFile(InputFileChangeEventArgs e)
     {
         movie.MovieFile = new byte[e.File.Size];
-        await e.File.OpenReadStream().ReadAsync(movie.MovieFile);
+        await e.File.OpenReadStream(movie.MovieFile.Length).ReadAsync(movie.MovieFile);
+         movie.MovieFileExtensions = e.File.ContentType;
     }
 
 
