--- a/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
@@ -112,7 +112,7 @@
 
                                         <div class="input-box">
                                             <i class="far fa-calendar-alt"></i>
-                                            <input type="text" placeholder="Premiere Date" @bind="@movie.MoviesDescription" required>
+                                            <input type="text" placeholder="Premiere Date" @bind="@movie.Description" required>
                                             <a>MoviesDescription</a>
                                         </div>
 @*
