--- a/BlazorMovie/MovieClient/Pages/MovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/MovieAdmin.razor
@@ -68,11 +68,11 @@
 
                             </ul>
                             <ul class="details">
-                                <li class="topic"><i class='bx bx-mail-send'></i> Studio ID</li>
+                                <li class="topic"><i class='bx bx-mail-send'></i> Studio Name</li>
                                 @foreach (var item in movies)
                                 {
                                     <li style="overflow: hidden; text-overflow: ellipsis; max-width: 150px; margin-right: 10px;">
-                                        <a>@item.StudioId</a>
+                                        <a>@item.StudioName</a>
                                     </li>
                                 }
                             </ul>
@@ -82,6 +82,15 @@
                                 {
                                     <li style="overflow: hidden; text-overflow: ellipsis; width: 200px; margin-right: 10px;">
                                         <a>@item.Genre</a>
+                                    </li>
+                                }
+                            </ul>
+                            <ul class="details">
+                                <li class="topic"><i class='bx bx-user'></i> Description</li>
+                                @foreach (var item in movies)
+                                {
+                                    <li style="overflow: hidden; text-overflow: ellipsis; width: 200px; margin-right: 10px;">
+                                        <a>@item.Description</a>
                                     </li>
                                 }
                             </ul>
