--- a/BlazorMovie/MovieClient/Pages/Test.razor
+++ b/BlazorMovie/MovieClient/Pages/Test.razor
@@ -56,7 +56,7 @@
    </EditForm>
 
 @code {
-    MovieModel movie = new();
+    MovieInputModel movie = new();
 
     public string a = string.Empty;
     private async Task GetImageFile(InputFileChangeEventArgs e)
