--- a/BlazorMovie/MovieClient/Shared/NavMenu.razor
+++ b/BlazorMovie/MovieClient/Shared/NavMenu.razor
@@ -14,10 +14,10 @@
             </div>
             <ul class="nav-list">
                 @*<li>
-                    <i class='bx bx-search'></i>
-                    <input type="text" placeholder="Search...">
-                    <span class="tooltip">Search</span>
-                    </li>*@
+                <i class='bx bx-search'></i>
+                <input type="text" placeholder="Search...">
+                <span class="tooltip">Search</span>
+                </li>*@
                 <li>
                     <a href="home">
                         <i class='bx bx-home'></i>
@@ -25,14 +25,18 @@
                     </a>
                     <span class="tooltip">Home</span>
                 </li>
-                <li>
-                    <a href="contact">
-                        <i class='bx bx-heart'></i>
-                        <span class="links_name">Contact Us</span>
-                    </a>
-                    <span class="tooltip">Contact Us</span>
-                </li>
 
+                <AuthorizeView>
+                    <Authorized>
+                        <li>
+                            <a href="contact">
+                                <i class='bx bx-heart'></i>
+                                <span class="links_name">Contact Us</span>
+                            </a>
+                            <span class="tooltip">Contact Us</span>
+                        </li>
+                    </Authorized>
+                </AuthorizeView>
 
                 <AuthorizeView Roles="Admin">
                     <Authorized>
