--- a/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieAdmin.razor
@@ -128,7 +128,7 @@
                             <MudButton HtmlTag="label"
                                Variant="Variant.Filled"
                                Color="Color.Primary"
-                               StartIcon="@Icons.Filled.CloudUpload"
+                               StartIcon="@Icons.Material.Filled.CloudUpload"
                                for="fileMovieInput">
                                 Upload Movie File
                             </MudButton>
@@ -138,7 +138,7 @@
                             <MudButton HtmlTag="label"
                                Variant="Variant.Filled"
                                Color="Color.Secondary"
-                               Icon="@Icons.Filled.Image"
+                               Icon="@Icons.Material.Filled.Image"
                                for="filePictureInput">
                                 Upload Picture File
                             </MudButton>
