--- a/BlazorMovie/MovieClient/Pages/MovieCustomer.razor
+++ b/BlazorMovie/MovieClient/Pages/MovieCustomer.razor
@@ -42,7 +42,7 @@
                 {
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="card">
-                            @if(DicImageLink.ContainsKey(item.MovieId))
+                            @if(DicImageLink.ContainsKey(item?.MovieId))
                         {
                             <img class="card-img-top" src="@DicImageLink[item.MovieId]" alt="Unsplash" style="width=320px; height: 280px"> 
                         }
