--- a/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
+++ b/BlazorMovie/MovieClient/Pages/EditMovieStudio.razor
@@ -115,7 +115,7 @@
                             <MudButton HtmlTag="label"
                                Variant="Variant.Filled"
                                Color="Color.Primary"
-                               StartIcon="@Icons.Filled.CloudUpload"
+                               StartIcon="@Icons.Material.Filled.CloudUpload"
                                for="fileMovieInput">
                                 Upload Movie File
                             </MudButton>
@@ -125,7 +125,7 @@
                             <MudButton HtmlTag="label"
                                Variant="Variant.Filled"
                                Color="Color.Secondary"
-                               Icon="@Icons.Filled.Image"
+                               Icon="@Icons.Material.Filled.Image"
                                for="filePictureInput">
                                 Upload Picture File
                             </MudButton>
